@@ -305,23 +305,22 @@ cc
 	if(2*(n/2).eq.n) rfodd=.false.
 	return
 	end
-ccccc
-ccccc
-	function rfnbreak(nhalf,n,nvar)
-cc
-cc  Computes the breakdown value of the MCD estimator
-cc
-        implicit none
-	integer rfnbreak, nhalf, n, nvar
 
-	if (nhalf.le.(n+nvar+1)/2) then
-	  rfnbreak=(nhalf-nvar)*100/n
-	else
-	  rfnbreak=(n-nhalf+1)*100/n
-	endif
-	return
-	end
 ccccc
+c unused 	function rfnbreak(nhalf,n,nvar)
+c unused cc
+c unused cc  Computes the breakdown value - in percent! - of the MCD estimator
+c unused cc
+c unused         implicit none
+c unused 	integer rfnbreak, nhalf, n, nvar
+c unused
+c unused 	if (nhalf.le.(n+nvar+1)/2) then
+c unused 	  rfnbreak=(nhalf-nvar)*100/n
+c unused 	else
+c unused 	  rfnbreak=(n-nhalf+1)*100/n
+c unused 	endif
+c unused 	return
+c unused 	end
 ccccc
 
 	subroutine rfmcduni(w,ncas,jqu,slutn,bstd,aw,aw2,factor,len)
