@@ -1,5 +1,5 @@
 
-R version 2.4.1 Patched (2007-02-04 r40669)
+R version 2.4.1 Patched (2007-03-25 r40887)
 Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -48,8 +48,10 @@ List of 14
  $ n.obs     : int 52
  $ alpha     : num 0.5
  $ quan      : num 27
- $ raw.cov   : Named num 0.839
-  ..- attr(*, "names")= chr "x"
+ $ raw.cov   : num [1, 1] 0.839
+  ..- attr(*, "dimnames")=List of 2
+  .. ..$ : chr "x"
+  .. ..$ : chr "x"
  $ raw.center: Named num 0.325
   ..- attr(*, "names")= chr "x"
  $ crit      : num 0.119
@@ -148,10 +150,8 @@ Robust Estimate of Location:
 rep(1, 12)  
          1  
 Robust Estimate of Covariance:
-      [,1]
-[1,]     0
-attr(,"names")
-[1]  "rep(1, 12)"
+            rep(1, 12)
+rep(1, 12)           0
 > str(rc)
 List of 15
  $ method     : chr "Univariate location and scale estimation."
@@ -160,16 +160,20 @@ List of 15
   ..$ kind: chr "identicalObs"
   ..$ q   : num 7
  $ cov        : num [1, 1] 0
-  ..- attr(*, "names")= chr "rep(1, 12)"
+  ..- attr(*, "dimnames")=List of 2
+  .. ..$ : chr "rep(1, 12)"
+  .. ..$ : chr "rep(1, 12)"
+ $ raw.cov    : num [1, 1] 0
+  ..- attr(*, "dimnames")=List of 2
+  .. ..$ : chr "rep(1, 12)"
+  .. ..$ : chr "rep(1, 12)"
  $ center     : Named num 1
+  ..- attr(*, "names")= chr "rep(1, 12)"
+ $ raw.center : Named num 1
   ..- attr(*, "names")= chr "rep(1, 12)"
  $ n.obs      : int 12
  $ alpha      : num 0.5
  $ quan       : num 7
- $ raw.cov    : num [1, 1] 0
-  ..- attr(*, "names")= chr "rep(1, 12)"
- $ raw.center : Named num 1
-  ..- attr(*, "names")= chr "rep(1, 12)"
  $ crit       : num 0
  $ mcd.wt     : num [1:12] 1 1 1 1 1 1 1 1 1 1 ...
  $ X          : num [1:12, 1] 1 1 1 1 1 1 1 1 1 1 ...
@@ -192,10 +196,8 @@ Robust Estimate of Location:
 rep(1, 12)  
          1  
 Robust Estimate of Covariance:
-      [,1]
-[1,]     0
-attr(,"names")
-[1]  "rep(1, 12)"
+            rep(1, 12)
+rep(1, 12)           0
 > ## with alpha = 1
 > (rc1 <- covMcd(rep(1,12), alpha = 1))
 Minimum Covariance Determinant (MCD) estimator.
@@ -356,5 +358,5 @@ Robust Estimate of Covariance:
 > 
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  0.692 0.044 1.152 0 0 
+Time elapsed:  0.64 0.08 1.162 0 0 
 > 
