@@ -1,3 +1,12 @@
+2007-03-26  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/rf-common.f (rfnbreak): really unused
+	* src/rfltsreg.f, src/rffastmcd.f: comment use of rfnbreak()
+
+2007-03-24  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/covMcd.R (covMcd): ans$raw.cov should be matrix even for p==1
+
 2007-03-21  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/ltsReg.R (ltsReg.default): fix long-standing ("rrcov") bug of
